# MoneyFlow

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.ssl.yml  docker-compose.yml  docker-entrypoint.sh  masterbudget.db.this  moneyflow.db  networth_historical_import.csv  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 07af927ecd81_initial_migration_with_users_and_income_.py  1b31dc368977_add_iso_options_and_budget_tables.py  24987ef4ea7c_add_budget_tables.py  2dade53f88fc_add_expense_tables.py  5c0699b6bbf1_add_amount_mode_and_tracking_period_.py  a1b2c3d4e5f6_add_mortgage_scenarios_table.py  b2c3d4e5f6g7_add_networth_tables.py  b758a9349f0c_add_recurring_expense_fields.py  bcb4694a6e46_add_tracking_period_months_to_budget_.py  c3d4e5f6g7h8_add_return_rates_to_contributions.py  c7270b46308a_add_tax_year_to_income_taxes.py  d4e5f6g7h8i9_add_portfolio_allocation_and_mc.py  e4add92354af_add_profile_picture_and_expense_links.py  e5f6g7h8i9j0_add_tax_credits_and_deductions.py  edd43dfbe2d8_description_of_change.py  f1a4380655fe_add_dark_mode_to_users.py  f2g3h4i5j6k7_add_vendor_table.py  g3h4i5j6k7l8_add_tutorial_fields.py  h4i5j6k7l8m9_add_non_employment_income.py  i5j6k7l8m9n0_add_nontaxable_income.py  j6k7l8m9n0o1_add_use_for_fire.py  k7l8m9n0o1p2_make_category_id_nullable.py  l8m9n0o1p2q3_add_budget_targets_to_users.py  m9n0o1p2q3r4_add_subscription_utilities.py
app/: db.py  logging_config.py  main.py
app/models/: __init__.py  budget.py  expense.py  income_taxes.py  mortgage.py  networth.py  user.py
app/routes/: auth.py  budget.py  expenses.py  forum.py  home.py  income_taxes.py  profile.py  tools.py  tutorial.py
app/static/: app.css
app/templates/: about.html  budget.html  expenses.html  forum.html  home.html  (+6 more)
data/: test_budget.csv  test_expenses.csv  test_networth.csv  utilites_data.csv
tests/: __init__.py  conftest.py  test_auth.py  test_budget.py  test_expenses.py  test_income_taxes.py
(+1 files in other folders)
