[project]
name = "moneyflow"
version = "2.0.0"
description = "MoneyFlow - Personal finance management with budgeting, expense tracking, tax calculations, investment projections, Monte Carlo simulations, and FIRE planning"
authors = [
    {name = "masonkelchner"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
