[tool.poetry]
name = "moneyflow"
version = "2.0.0"
description = "MoneyFlow - Personal finance management with budgeting, expense tracking, tax calculations, investment projections, Monte Carlo simulations, and FIRE planning"
authors = ["masonkelchner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.0"
sqlalchemy = "^2.0.35"
httpx = "^0.27.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
plotly = "^5.24.0"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
orjson = "^3.10.0"
typer = "^0.12.0"
bcrypt = "^4.2.0"
alembic = "^1.13.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"
isort = "^5.13.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
